# nevermisscall

./: .gitignore  CLAUDE.md  README.md  documentation-requirement.md  scratch.txt
as-alerts-service/: README.md  main.py  requirements.txt  run_tests.py
as-call-service/: .env.example  .eslintrc.js  README.md  pyproject.toml  requirements.txt  run_dev.py  run_tests.py
as-call-service/src/as_call_service/: __init__.py  main.py
as-call-service/src/as_call_service/config/: __init__.py  settings.py
as-call-service/src/as_call_service/controllers/: __init__.py  call_controller.py  conversation_controller.py  health_controller.py  lead_controller.py
as-call-service/src/as_call_service/models/: __init__.py  call.py  conversation.py  lead.py  message.py
as-call-service/src/as_call_service/services/: __init__.py  call_service.py  conversation_service.py  lead_service.py  validation_service.py
as-call-service/src/as_call_service/utils/: __init__.py  auth.py  http_client.py  shared_integration.py
as-call-service/tests/: conftest.py
as-call-service/tests/integration/: test_api_endpoints.py
as-call-service/tests/unit/: test_api_validation.py  test_call_service.py  test_conversation_service.py  test_core_business_logic.py  test_models_only.py  test_service_integration.py  test_simple_validation.py  test_validation_logic.py  test_validation_service.py
as-connection-service/: .env.example  README.md  TEST_COVERAGE_SUMMARY.md  TEST_RUN_RESULTS.md  pytest.ini  requirements.txt  run_tests.py  simple_test.py  test_core_logic.py
as-infrastructure-service/: README.md  TEST_RESULTS.md  requirements.txt  run_tests.py  (+2 more)
(+250 files in other folders)
